--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.6",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "next": "14.2.2",
